force-app/main/default/objects/Operations_Fiscal_Year__c/Operations_Fiscal_Year__c.object-meta.xml
<CustomObject>
    <description>This Object holds Fiscal Year information of HR Services Operational Team</description>
    <label>Operations Fiscal Year</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Fiscal Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations Fiscal Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>