force-app/main/default/objects/Operations_Fiscal_Year__c/fields/February_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>February_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>February Start Date</label>
    <type>Date</type>
</CustomField>