force-app/main/default/objects/Operations_Fiscal_Year__c/fields/January_End_Date__c.field-meta.xml
<CustomField>
    <fullName>January_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>January End Date</label>
    <type>Date</type>
</CustomField>