force-app/main/default/objects/Operations_Fiscal_Year__c/fields/July_Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>July_Fiscal_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>July Fiscal Month</label>
    <length>4</length>
    <type>Text</type>
</CustomField>