force-app/main/default/objects/Operations_Fiscal_Year__c/fields/May_End_Date__c.field-meta.xml
<CustomField>
    <fullName>May_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>May End Date</label>
    <type>Date</type>
</CustomField>