force-app/main/default/objects/Operations_Fiscal_Year__c/fields/November_Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>November_Fiscal_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>November Fiscal Month</label>
    <length>8</length>
    <type>Text</type>
</CustomField>