force-app/main/default/objects/Operations_Fiscal_Year__c/fields/October_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>October_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>October Start Date</label>
    <type>Date</type>
</CustomField>